...
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="@dimen/spacing_lg"
        android:background="@drawable/rounded_search_bar">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="search"
            android:background="@null"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="@dimen/spacing_sm"
...
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/spacing_xxxl"
            android:paddingBottom="@dimen/spacing_md"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tracks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/spacing_lg"
            android:clipToPadding="false" />

...
